generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

enum SourceType {
  API
  FILE
  MANUAL
}

enum ImportJobType {
  OPEN5E
  FILE // legacy value — Compendium jobs wrote this before Phase 6 split it out;
  // existing historical rows keep it as-is, no backfill. New jobs never write it.
  COMPENDIUM
  JSON_FILE
}

enum ImportJobStatus {
  PENDING
  AWAITING_CONFIRMATION
  RUNNING
  COMPLETED
  FAILED
  PARTIAL
}

model Source {
  id          String     @id
  name        String
  type        SourceType
  description String?
  lastUpdated DateTime
  isDeletable Boolean

  spells       ContentSpell[]
  classes      ContentClass[]
  subclasses   ContentSubclass[]
  races        ContentRace[]
  subraces     ContentSubrace[]
  backgrounds  ContentBackground[]
  conditions   ContentCondition[]
  items        ContentItem[]
  monsters     ContentMonster[]
  feats        ContentFeat[]
  classOptions ContentClassOption[]
  importJobs   ImportJob[]
}

model ImportJob {
  id             String          @id @default(cuid())
  sourceId       String
  source         Source          @relation(fields: [sourceId], references: [id])
  jobType        ImportJobType
  contentTypes   String // JSON array, e.g. ["SPELL","ITEM"]
  status         ImportJobStatus @default(PENDING)
  totalItems     Int?
  processedItems Int             @default(0)
  errorLog       String? // JSON array of { contentType, message }
  warnings       String? // JSON array of { type, id, name, formerParentId } — Phase 4:
  // non-fatal FYI (e.g. a homebrew subclass orphaned by this refresh),
  // distinct from errorLog's real per-content-type failures
  startedAt      DateTime        @default(now())
  completedAt    DateTime?
}

model ContentSpell {
  id            String  @id @default(cuid())
  slug          String
  sourceId      String
  source        Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name          String
  level         Int
  school        String
  castingTime   String
  range         String
  components    String
  material      String?
  duration      String
  concentration Boolean
  ritual        Boolean
  classes       String // JSON array of class display names
  description   String
  higherLevels  String? // free-text "At Higher Levels" prose, kept alongside extraData.scaling
  extraData     String? // scaling[] (both sources — { trigger: "slot_level" | "character_level",
  // triggerValue: number | null, dice: string, description: string | null }),
  // damageRoll, damageTypes, savingThrow, attackRoll, materialConsumed (both
  // sources), targetType/targetCount, shape info, reactionCondition, materialCost

  @@unique([sourceId, slug])
  @@index([level])
  @@index([school])
}

model ContentClass {
  id                  String  @id @default(cuid())
  slug                String
  sourceId            String
  source              Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name                String
  hitDie              Int
  primaryAbility      String // JSON: { abilities: string[], logic: "AND"|"OR" }
  savingThrows        String // JSON array
  armorProfs          String // JSON array
  weaponProfs         String // JSON array
  skillChoices        String // JSON, Fixed/Choice Grant Shape
  spellcastingAbility String?
  description         String
  extraData           String? // casterType (FULL/HALF/NONE/PACT, both sources), toolProfs/slotsReset (Compendium only)

  subclasses   ContentSubclass[]
  classOptions ContentClassOption[]
  features     ContentClassFeature[]

  @@unique([sourceId, slug])
}

model ContentSubclass {
  id          String        @id @default(cuid())
  slug        String
  sourceId    String
  source      Source        @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  classId     String? // nullable per Phase 4 — was required with onDelete: NoAction originally
  class       ContentClass? @relation(fields: [classId], references: [id], onDelete: SetNull)
  name        String
  description String
  extraData   String? // unresolvedClassName if cross-source resolution (see Compendium docs) fails

  features ContentClassFeature[]

  @@unique([sourceId, slug])
}

// Phase 2.6 — one row per level, not one row per feature-that-may-recur:
// Open5e's grouped {levels: [4,8,12,16]} entries explode into 4 rows here to
// match Compendium's native one-row-per-<autolevel level="N"> granularity.
// A row belongs to exactly one of classId/subclassId; not enforceable at the
// Prisma level, validated in the transform layer before insert.
model ContentClassFeature {
  id          String           @id @default(cuid())
  classId     String?
  class       ContentClass?    @relation(fields: [classId], references: [id], onDelete: Cascade)
  subclassId  String?
  subclass    ContentSubclass? @relation(fields: [subclassId], references: [id], onDelete: Cascade)
  level       Int
  name        String
  description String
  type        String? // Open5e's feature-type tag when known (e.g. CLASS_LEVEL_FEATURE); null on Compendium rows

  @@index([classId, level])
  @@index([subclassId, level])
}

model ContentRace {
  id          String  @id @default(cuid())
  slug        String
  sourceId    String
  source      Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name        String
  size        String // JSON array, e.g. ["medium"] or ["small","medium"]
  speed       String // JSON, { walk, fly?, swim? }
  traits      String // JSON array of { name, description, level, grant? }
  description String
  extraData   String?

  parentRaceId String?
  parentRace   ContentRace?     @relation("RaceSubspecies", fields: [parentRaceId], references: [id], onDelete: NoAction)
  subspecies   ContentRace[]    @relation("RaceSubspecies")
  subraces     ContentSubrace[]

  @@unique([sourceId, slug])
}

model ContentSubrace {
  id          String       @id @default(cuid())
  slug        String
  sourceId    String
  source      Source       @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  raceId      String? // nullable per Phase 4 — was required with onDelete: NoAction originally
  race        ContentRace? @relation(fields: [raceId], references: [id], onDelete: SetNull)
  name        String
  description String?
  size        String? // JSON array, null unless this subrace overrides the parent's
  speed       String? // JSON, null unless overridden
  traits      String // JSON array, same shape as ContentRace.traits
  extraData   String? // unresolvedRaceName if cross-source resolution (see Compendium docs) fails

  @@unique([sourceId, slug])
}

model ContentBackground {
  id             String  @id @default(cuid())
  slug           String
  sourceId       String
  source         Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name           String
  proficiencies  String // JSON, Fixed/Choice Grant Shape, entries tagged category: "skill"|"tool"
  abilityBonuses String // JSON, Fixed/Choice Grant Shape (fixed is an object, not array)
  feature        String // JSON array of { name, description }
  description    String
  extraData      String? // languages, equipment, unrecognizedBenefits[], flavor text

  @@unique([sourceId, slug])
}

model ContentCondition {
  id          String  @id @default(cuid())
  slug        String
  sourceId    String
  source      Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name        String
  description String
  effects     String?
  extraData   String? // descriptionSource/requestedSource (when a fallback was used), icon

  @@unique([sourceId, slug])
}

model ContentItem {
  id                 String  @id @default(cuid())
  slug               String
  sourceId           String
  source             Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name               String
  itemType           String
  rarity             String?
  requiresAttunement Boolean
  cost               String?
  weight             String?
  damage             String?
  armorClass         String?
  properties         String? // JSON array of { name, detail? }
  description        String
  extraData          String? // size, range, isSimple/isMartial/isImprovised,
  // stealthDisadvantage, maxDexBonus, addDexMod, strRequired,
  // acDisplay, attunementDetail

  @@unique([sourceId, slug])
  @@index([itemType])
  @@index([rarity])
}

model ContentMonster {
  id                    String  @id @default(cuid())
  slug                  String
  sourceId              String
  source                Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name                  String
  size                  String
  monsterType           String
  alignment             String
  armorClass            Int
  hitPoints             Int
  hitDice               String
  speed                 String // JSON
  abilityScores         String // JSON
  savingThrows          String?
  skills                String?
  damageResistances     String? // JSON array: [{ types: string[], nonmagical: boolean, bypassedBy: string | null }]
  damageImmunities      String? // same shape as damageResistances
  damageVulnerabilities String? // same shape as damageResistances
  conditionImmunities   String? // same shape as damageResistances (types = condition names)
  senses                String?
  languages             String?
  challengeRating       String
  experiencePoints      Int // computed from challengeRating at import time, both sources — Phase 2.6
  actions               String // JSON array, each tagged actionType: "action"|"bonus"|"reaction"
  legendaryActions      String?
  description           String?
  extraData             String? // armorClassDetail, lairActions, traits[], spellcasting,
  // proficiencyBonus, legendaryResistances, category/subcategory,
  // ancestry, environment, telepathyRange (Compendium only)

  @@unique([sourceId, slug])
  @@index([challengeRating])
  @@index([monsterType])
}

model ContentFeat {
  id           String  @id @default(cuid())
  slug         String
  sourceId     String
  source       Source  @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  name         String
  category     String // "GENERAL" | "ORIGIN" | "FIGHTING_STYLE" | "EPIC_BOON" | "CLASS_SPECIFIC"
  prerequisite String?
  description  String
  extraData    String? // benefits[] (Open5e only), special, modifiers[]

  @@unique([sourceId, slug])
}

model ContentClassOption {
  id           String        @id @default(cuid())
  slug         String
  sourceId     String
  source       Source        @relation(fields: [sourceId], references: [id], onDelete: Cascade)
  classId      String?
  class        ContentClass? @relation(fields: [classId], references: [id], onDelete: SetNull)
  pool         String // "Metamagic" | "Eldritch Invocation" | "Maneuver" | future pools
  name         String
  description  String
  prerequisite String?
  extraData    String?

  @@unique([sourceId, slug])
}

model Language {
  id       String @id @default(cuid())
  name     String @unique
  category String // "common" | "exotic" | "secret"
}
